crates/sui-adapter-transactional-tests/tests/size_limits/identitifer_len_limits.exp
processed 4 tasks

task 1 'publish'. lines 8-18:
Error: Transaction Effects Status: Move Bytecode Verification Error. Please run the Bytecode Verifier for more information.
Execution Error: ExecutionError: ExecutionError { inner: ExecutionErrorInner { kind: VMVerificationOrDeserializationError, source: Some(VMError { major_status: IDENTIFIER_TOO_LONG, sub_status: None, message: None, exec_state: None, location: Module(ModuleId { address: _, name: Identifier("M1_1234567891234567890123456789012345678912345678901234567890123456789123456789012345678908901234567891234567890123456789078912345678901234567890") }), indices: [(Identifier, 0)], offsets: [] }), command: Some(0) } }

task 2 'publish'. lines 20-30:
Error: Transaction Effects Status: Move Bytecode Verification Error. Please run the Bytecode Verifier for more information.
Execution Error: ExecutionError: ExecutionError { inner: ExecutionErrorInner { kind: VMVerificationOrDeserializationError, source: Some(VMError { major_status: IDENTIFIER_TOO_LONG, sub_status: None, message: None, exec_state: None, location: Module(ModuleId { address: _, name: Identifier("M1_12345678912345678901234567890") }), indices: [(Identifier, 1)], offsets: [] }), command: Some(0) } }

task 3 'publish'. lines 33-57:
Error: warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpAadKq7:36:26
   │
36 │     use sui::tx_context::TxContext;
   │                          ^^^^^^^^^ Unused 'use' of alias 'TxContext'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpAadKq7:37:23
   │
37 │     use sui::object::{Self, UID};
   │                       ^^^^ Unused 'use' of alias 'object'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpAadKq7:37:29
   │
37 │     use sui::object::{Self, UID};
   │                             ^^^ Unused 'use' of alias 'UID'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpAadKq7:38:14
   │
38 │     use std::vector;
   │              ^^^^^^ Unused 'use' of alias 'vector'. Consider removing it
   │
   = This alias does not shadow the built-in type 'vector' in type annotations.
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpAadKq7:40:17
   │
40 │         let mut mut v: vector<UID> = vector::empty();
   │                 ^^^
   │                 │
   │                 Unexpected 'mut'
   │                 Expected an identifier


